packages/__old__dartvel_shelf_/lib/src/ffi/bindings.dart

// DO NOT EDIT. Generated by ffigen.
// Run: dart run ffigen

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint
import 'dart:ffi' as ffi;

/// FFI bindings for dartvel_shelf
class DartvelShelfBindings {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
      _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  DartvelShelfBindings(ffi.DynamicLibrary dynamicLibrary)
      : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  DartvelShelfBindings.fromLookup(
      ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
          lookup)
      : _lookup = lookup;

  SliceU8 dv_last_error() {
    return _dv_last_error();
  }

  late final _dv_last_errorPtr =
      _lookup<ffi.NativeFunction<SliceU8 Function()>>('dv_last_error');
  late final _dv_last_error =
      _dv_last_errorPtr.asFunction<SliceU8 Function()>();

  int dv_server_bootstrap(
    ffi.Pointer<ffi.Uint8> cfg_ptr,
    int cfg_len,
  ) {
    return _dv_server_bootstrap(
      cfg_ptr,
      cfg_len,
    );
  }

  late final _dv_server_bootstrapPtr = _lookup<
      ffi.NativeFunction<
          ffi.Uint64 Function(
              ffi.Pointer<ffi.Uint8>, ffi.UintPtr)>>('dv_server_bootstrap');
  late final _dv_server_bootstrap = _dv_server_bootstrapPtr
      .asFunction<int Function(ffi.Pointer<ffi.Uint8>, int)>();

  int dv_server_poll_job(
    int server,
    ffi.Pointer<RequestEnvelope> out_req,
  ) {
    return _dv_server_poll_job(
      server,
      out_req,
    );
  }

  late final _dv_server_poll_jobPtr = _lookup<
      ffi.NativeFunction<
          ffi.Uint8 Function(
              ffi.Uint64, ffi.Pointer<RequestEnvelope>)>>('dv_server_poll_job');
  late final _dv_server_poll_job = _dv_server_poll_jobPtr
      .asFunction<int Function(int, ffi.Pointer<RequestEnvelope>)>();

  int dv_server_submit_response(
    int _server,
    ffi.Pointer<ResponseEnvelope> _resp,
  ) {
    return _dv_server_submit_response(
      _server,
      _resp,
    );
  }

  late final _dv_server_submit_responsePtr = _lookup<
      ffi.NativeFunction<
          ffi.Uint8 Function(ffi.Uint64,
              ffi.Pointer<ResponseEnvelope>)>>('dv_server_submit_response');
  late final _dv_server_submit_response = _dv_server_submit_responsePtr
      .asFunction<int Function(int, ffi.Pointer<ResponseEnvelope>)>();

  int dv_request_metadata_read(
    int _h,
    ffi.Pointer<ffi.Uint8> _dst,
    int _cap,
  ) {
    return _dv_request_metadata_read(
      _h,
      _dst,
      _cap,
    );
  }

  late final _dv_request_metadata_readPtr = _lookup<
      ffi.NativeFunction<
          ffi.UintPtr Function(ffi.Uint64, ffi.Pointer<ffi.Uint8>,
              ffi.UintPtr)>>('dv_request_metadata_read');
  late final _dv_request_metadata_read = _dv_request_metadata_readPtr
      .asFunction<int Function(int, ffi.Pointer<ffi.Uint8>, int)>();

  int dv_response_write_chunk(
    int h,
    ffi.Pointer<ffi.Uint8> src,
    int len,
  ) {
    return _dv_response_write_chunk(
      h,
      src,
      len,
    );
  }

  late final _dv_response_write_chunkPtr = _lookup<
      ffi.NativeFunction<
          ffi.UintPtr Function(ffi.Uint64, ffi.Pointer<ffi.Uint8>,
              ffi.UintPtr)>>('dv_response_write_chunk');
  late final _dv_response_write_chunk = _dv_response_write_chunkPtr
      .asFunction<int Function(int, ffi.Pointer<ffi.Uint8>, int)>();

  int dv_response_open_stream(
    int r,
  ) {
    return _dv_response_open_stream(
      r,
    );
  }

  late final _dv_response_open_streamPtr =
      _lookup<ffi.NativeFunction<ffi.Uint64 Function(ffi.Uint64)>>(
          'dv_response_open_stream');
  late final _dv_response_open_stream =
      _dv_response_open_streamPtr.asFunction<int Function(int)>();

  int dv_response_finalize_stream(
    int tx,
  ) {
    return _dv_response_finalize_stream(
      tx,
    );
  }

  late final _dv_response_finalize_streamPtr =
      _lookup<ffi.NativeFunction<ffi.Uint8 Function(ffi.Uint64)>>(
          'dv_response_finalize_stream');
  late final _dv_response_finalize_stream =
      _dv_response_finalize_streamPtr.asFunction<int Function(int)>();

  int dv_response_write_for_request(
    int r,
    ffi.Pointer<ffi.Uint8> src,
    int len,
  ) {
    return _dv_response_write_for_request(
      r,
      src,
      len,
    );
  }

  late final _dv_response_write_for_requestPtr = _lookup<
      ffi.NativeFunction<
          ffi.UintPtr Function(ffi.Uint64, ffi.Pointer<ffi.Uint8>,
              ffi.UintPtr)>>('dv_response_write_for_request');
  late final _dv_response_write_for_request = _dv_response_write_for_requestPtr
      .asFunction<int Function(int, ffi.Pointer<ffi.Uint8>, int)>();

  int dv_ws_send_text(
    int _ws,
    ffi.Pointer<ffi.Uint8> _src,
    int _len,
  ) {
    return _dv_ws_send_text(
      _ws,
      _src,
      _len,
    );
  }

  late final _dv_ws_send_textPtr = _lookup<
      ffi.NativeFunction<
          ffi.UintPtr Function(ffi.Uint64, ffi.Pointer<ffi.Uint8>,
              ffi.UintPtr)>>('dv_ws_send_text');
  late final _dv_ws_send_text = _dv_ws_send_textPtr
      .asFunction<int Function(int, ffi.Pointer<ffi.Uint8>, int)>();

  int dv_ws_send_bin(
    int _ws,
    ffi.Pointer<ffi.Uint8> _src,
    int _len,
  ) {
    return _dv_ws_send_bin(
      _ws,
      _src,
      _len,
    );
  }

  late final _dv_ws_send_binPtr = _lookup<
      ffi.NativeFunction<
          ffi.UintPtr Function(ffi.Uint64, ffi.Pointer<ffi.Uint8>,
              ffi.UintPtr)>>('dv_ws_send_bin');
  late final _dv_ws_send_bin = _dv_ws_send_binPtr
      .asFunction<int Function(int, ffi.Pointer<ffi.Uint8>, int)>();

  int dv_ws_close(
    int _ws,
    int _code,
    ffi.Pointer<ffi.Uint8> _reason,
    int _len,
  ) {
    return _dv_ws_close(
      _ws,
      _code,
      _reason,
      _len,
    );
  }

  late final _dv_ws_closePtr = _lookup<
      ffi.NativeFunction<
          ffi.Uint8 Function(ffi.Uint64, ffi.Uint16, ffi.Pointer<ffi.Uint8>,
              ffi.UintPtr)>>('dv_ws_close');
  late final _dv_ws_close = _dv_ws_closePtr
      .asFunction<int Function(int, int, ffi.Pointer<ffi.Uint8>, int)>();
}

final class SliceU8 extends ffi.Struct {
  external ffi.Pointer<ffi.Uint8> ptr;

  @ffi.UintPtr()
  external int len;
}

final class RequestEnvelope extends ffi.Struct {
  @ffi.Uint64()
  external int request_id;

  @ffi.Uint32()
  external int route_id;

  @ffi.Uint8()
  external int method;

  @ffi.Uint32()
  external int path_off;

  @ffi.Uint32()
  external int path_len;

  @ffi.Uint32()
  external int hdr_off;

  @ffi.Uint32()
  external int hdr_len;

  @ffi.Uint32()
  external int body_off;

  @ffi.Uint32()
  external int body_len;

  @ffi.Uint64()
  external int body_rx;

  @ffi.Uint64()
  external int deadline_ns;
}

final class ResponseEnvelope extends ffi.Struct {
  @ffi.Uint64()
  external int request_id;

  @ffi.Uint16()
  external int status;

  @ffi.Uint32()
  external int hdr_off;

  @ffi.Uint32()
  external int hdr_len;

  @ffi.Uint64()
  external int body_tx;

  @ffi.Uint64()
  external int content_len;

  @ffi.Uint8()
  external int finalize;
}
